[package]
name = "dupimg"
version = "0.1.1"
description = "A simple duplicate image finder"
categories = ["command-line-utilities", "multimedia::images"]
readme = true
repository = "https://github.com/DenebTM/dupimg"
license = "AGPL-3.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
dssim-core = "3.2.5"
image = "0.24.5"
imgref = "1.9.4"
lazy_static = "1.4.0"
moka = "0.10.0"
num_cpus = "1.15.0"
rgb = "0.8.35"
threadpool = "1.8.1"
